--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,13 +2,20 @@
 <h2>All Movies</h2>
 
 <%#  Part 2: Start here... %>
-
+<% @allRatings.each do |rating| %>
+  <input type="checkbox" id="vehicle1" name="" value=1>
+  <p>"#{rating}"</p>
+<% end %>
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th>Movie Title</th>
+      <th class="<%= 'hilite text-success' if @sortedBy == 'title'%>">
+        <%= link_to 'Movie Title', movies_path(:sort_by => 'title'), :style => 'text-decoration:none; color:inherit', :id => 'title_header' %>
+      </th>
       <th>Rating</th>
-      <th>Release Date</th>
+      <th class="<%= 'hilite text-success' if @sortedBy == 'release_date'%>">
+        <%= link_to 'Release Date', movies_path(:sort_by => 'release_date'), :style => 'text-decoration:none; color:inherit', :id => 'release_date_header' %>
+      </th>
       <th>More Info</th>
     </tr>
   </thead>
