--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,7 +1,7 @@
 <!--  This file is app/views/movies/index.html.erb -->
 <h2>All Movies</h2>
 
-<%#  Part 2: Start here... %>
+<%#  Part 2: Checkbox creation for Ratings filter logic here %>
 <% if !@allRatings.empty? %>
   <%= form_tag movies_path, :method => 'get', :id => 'ratings_form' do %>
     <span style='font-weight: bold'>Ratings : </span>&nbsp;&nbsp;
@@ -12,6 +12,8 @@
     <%= submit_tag 'Refresh', :class => 'btn btn-primary', :id => 'ratings_submit' %>
   <% end %>
 <% end %>
+
+<%#  Part 1: Movie Title, Release Date based header sorting logic here %>
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
